--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "react-boilerplate",
-  "version": "3.7.0",
-  "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
+  "name": "map-viewer",
+  "version": "0.0.1",
+  "description": "Simple project to work with maps",
   "repository": {
     "type": "git",
-    "url": "git://github.com/react-boilerplate/react-boilerplate.git"
+    "url": "git://github.com/LanskovNV/MapViewer.git"
   },
   "engines": {
     "npm": ">=5",
     "node": ">=8.10.0"
   },
-  "author": "Max Stoiber",
-  "license": "MIT",
+  "author": "LanskovNV, sevarsh, Tumanov-Viatcheslav",
   "scripts": {
     "analyze:clean": "rimraf stats.json",
     "preanalyze": "npm run analyze:clean",
@@ -77,6 +76,7 @@
     "minimist": "1.2.0",
     "prop-types": "15.6.2",
     "react": "16.6.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "16.6.0",
     "react-helmet": "5.2.0",
     "react-intl": "2.7.2",
@@ -132,9 +132,9 @@
     "file-loader": "2.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "image-webpack-loader": "4.4.0",
+    "image-webpack-loader": "^4.6.0",
     "imports-loader": "0.8.0",
-    "jest-cli": "23.6.0",
+    "jest-cli": "^24.3.1",
     "jest-styled-components": "6.2.2",
     "lint-staged": "7.3.0",
     "ngrok": "3.1.0",
@@ -149,7 +149,7 @@
     "rimraf": "2.6.2",
     "shelljs": "0.8.2",
     "style-loader": "0.23.1",
-    "stylelint": "9.6.0",
+    "stylelint": "^9.10.1",
     "stylelint-config-recommended": "2.1.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.5.0",
