--- a/app/readyMaps/config.json
+++ b/app/readyMaps/config.json
@@ -1,3 +1,16 @@
 {
-  "mapList": ["en.json", "de.json"]
+  "mapList": [
+    {
+      "map_ID": 0,
+      "map_file_name": "map1.json"
+    },
+    {
+      "map_ID": 1,
+      "map_file_name": "map2.json"
+    },
+    {
+      "map_ID": 2,
+      "map_file_name": "map3.json"
+    }
+  ]
 }
