--- a/package.json
+++ b/package.json
@@ -3,33 +3,47 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "husky": "^1.3.1",
+    "immutable": "3.8.2",
+    "intl": "1.2.5",
     "lint-staged": "^8.1.5",
+    "loadable-components": "2.2.3",
     "prettier": "^1.16.4",
+    "prop-types": "15.6.2",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-intl": "2.7.2",
+    "react-redux": "5.0.7",
+    "react-scripts": "2.1.8",
+    "redux": "4.0.1",
+    "redux-immutable": "4.0.0",
+    "redux-saga": "0.16.2",
+    "reselect": "4.0.0",
+    "styled-components": "4.0.2"
   },
   "lint-staged": {
-       "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-       "prettier --single-quote --write",
-       "git add"
-     ]
+    "src/**/*.{js,jsx,ts,tsx,json,md}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.js",
+    "extract-intl": "node ./extract-intl.js"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "husky": {
     "hooks": {
-        "pre-commit": "lint-staged"
-      }
+      "pre-commit": "lint-staged"
+    }
   },
   "browserslist": [
     ">0.2%",
