--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
     "react-intl": "2.7.2",
-    "react-redux": "5.0.7",
+    "react-intl-cra": "^0.3.4",
     "react-scripts": "2.1.8",
-    "redux": "4.0.1",
-    "redux-immutable": "4.0.0",
-    "redux-saga": "0.16.2",
     "reselect": "4.0.0",
     "styled-components": "4.0.2"
   },
@@ -35,7 +32,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
-    "extract-intl": "node ./extract-intl.js"
+    "extract:messages": "react-intl-cra 'src/**/*.{js,jsx}' -o 'src/i18n/messages/messages.json'",
+    "manage:translations": "node src/translationRunner.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,5 +48,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-intl-translations-manager": "^5.0.3"
+  }
 }
