--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "husky": "^1.3.1",
     "immutable": "3.8.2",
     "intl": "1.2.5",
+    "jquery": "^3.3.1",
     "lint-staged": "^8.1.5",
     "loadable-components": "2.2.3",
+    "popper.js": "^1.14.7",
     "prettier": "^1.16.4",
     "prop-types": "15.6.2",
     "react": "^16.8.4",
