--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "d3": "^5.9.2",
     "husky": "^1.3.1",
     "immutable": "3.8.2",
     "intl": "1.2.5",
@@ -20,7 +21,8 @@
     "react-intl-cra": "^0.3.4",
     "react-scripts": "2.1.8",
     "reselect": "4.0.0",
-    "styled-components": "4.0.2"
+    "styled-components": "4.0.2",
+    "three": "^0.103.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,md}": [
