Lint fixes and refactoring (#24)
* Updated

 - refactored preload maps

* Updated .gitignore

 - added ignore rool to package-lock.json

* Updated lint

 - updated lint rules
 - added "settings"
 - fix lint errors in code

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
 
 # testing
 /coverage
 
 # production
 /build
+/src/readyMaps/*
 
 # misc
 .DS_Store
@@ -24,3 +26,5 @@ yarn-error.log*
 
 # WebStorm
 .idea/*
+
+
