--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "2.1.8",
     "reselect": "4.0.0",
     "styled-components": "4.0.2",
-    "three": "^0.103.0"
+    "three": "^0.103.0",
+    "three-orbitcontrols": "^2.102.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,md}": [
