--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "d3": "^5.9.2",
     "husky": "^1.3.1",
     "immutable": "3.8.2",
     "intl": "1.2.5",
@@ -22,7 +21,8 @@
     "react-scripts": "2.1.8",
     "reselect": "4.0.0",
     "styled-components": "4.0.2",
-    "three": "^0.103.0"
+    "three": "^0.103.0",
+    "three-orbitcontrols": "^2.102.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,md}": [
