--- a/package.json
+++ b/package.json
@@ -54,6 +54,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
+    "jest": "^24.8.0",
     "react-intl-translations-manager": "^5.0.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
