--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "earcut": "^2.1.5",
     "husky": "^1.3.1",
     "immutable": "3.8.2",
     "intl": "1.2.5",
