--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "earcut": "^2.1.5",
+    "esdoc": "^1.1.0",
+    "esdoc-react-plugin": "^1.0.1",
+    "esdoc-standard-plugin": "^1.0.0",
     "husky": "^1.3.1",
     "immutable": "3.8.2",
     "intl": "1.2.5",
@@ -37,6 +40,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
+    "doc": "esdoc -c esdoc.json",
+    "postinstall": "npm run build && npm run doc",
     "extract:messages": "react-intl-cra 'src/**/*.{js,jsx}' -o 'src/i18n/messages/messages.json'",
     "manage:translations": "node src/translationRunner.js"
   },
