--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "babel-core": "^7.0.0-bridge.0",
     "bootstrap": "^4.3.1",
     "earcut": "^2.1.5",
-    "esdoc": "^1.1.0",
     "esdoc-react-plugin": "^1.0.1",
-    "esdoc-standard-plugin": "^1.0.0",
+    "eslint": "^5.0.0",
     "husky": "^1.3.1",
     "immutable": "3.8.2",
     "intl": "1.2.5",
@@ -23,7 +22,7 @@
     "react-dom": "^16.8.4",
     "react-intl": "2.7.2",
     "react-intl-cra": "^0.3.4",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.1.1",
     "reselect": "4.0.0",
     "styled-components": "4.0.2",
     "three": "^0.103.0",
@@ -42,7 +41,6 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
     "doc": "esdoc -c esdoc.json",
-    "postinstall": "npm run build && npm run doc",
     "extract:messages": "react-intl-cra 'src/**/*.{js,jsx}' -o 'src/i18n/messages/messages.json'",
     "manage:translations": "node src/translationRunner.js"
   },
@@ -61,8 +59,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "acorn": "^7.0.0",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "react-intl-translations-manager": "^5.0.3"
+    "react-intl-translations-manager": "^5.0.3",
+    "typescript": "^3.6.2"
   }
 }
