--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "babel-core": "^7.0.0-bridge.0",
     "bootstrap": "^4.3.1",
     "earcut": "^2.1.5",
-    "esdoc-react-plugin": "^1.0.1",
-    "eslint": "^5.0.0",
     "husky": "^1.3.1",
     "immutable": "3.8.2",
     "intl": "1.2.5",
@@ -59,10 +57,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "acorn": "^7.0.0",
     "esdoc": "^1.1.0",
+    "esdoc-react-plugin": "^1.0.1",
     "esdoc-standard-plugin": "^1.0.0",
-    "react-intl-translations-manager": "^5.0.3",
-    "typescript": "^3.6.2"
+    "react-intl-translations-manager": "^5.0.3"
   }
 }
