Add messages and translations
* New messages appearing in Progress component were added to messages.js and messages.json with their translations added to en.json and ru.json

* New messages were added properly to Progress component

* Script extract:messages was fixed

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
     "doc": "esdoc -c esdoc.json",
-    "extract:messages": "react-intl-cra 'src/**/*.{js,jsx}' -o 'src/i18n/messages/messages.json'",
+    "extract:messages": "react-intl-cra src/*.js -o src/i18n/messages/messages.json",
     "manage:translations": "node src/translationRunner.js"
   },
   "eslintConfig": {
